[package]
authors = ["SamP20 <samp20@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "nrf52-scheduling"
version = "0.1.0"

[dependencies]
cortex-m = { version = ">=0.5.8, <0.7", features = ["inline-asm"] }
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
[dependencies.nrf52832-pac]
features = ["rt"]
#version = "0.6.0"
git = "https://github.com/nrf-rs/nrf52832-pac.git"
branch = "rev-deps"


# this lets you use `cargo fix`!
[[bin]]
name = "nrf52-scheduling"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[features]
xxAA-package = []
xxAB-package = []

default = ["xxAB-package"]