[package]
name = "nrf52832"
version = "0.1.0"
authors = ["SamP20 <samp20@users.noreply.github.com>"]
edition = "2018"

[dependencies]
cortexm-scheduling = { path = "../.." }
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
cortex-m = { version = "0.6.0", features = ["inline-asm"] }
cortex-m-rt = "0.6.8"
embedded-hal = "0.2.2"

[dependencies.nrf52832-hal]
features = ["rt"]
version = "0.8.1"

# this lets you use `cargo fix`!
[[bin]]
name = "nrf52832"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[features]
xxAA-package = []
xxAB-package = []

default = ["xxAB-package"]